# protobuf_example

./: CMakeLists.txt  README.md  main.cpp
protos/: CMakeLists.txt  test.proto
